<resources>
    <string name="app_name">Online Music Stream App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="what_do_you_want_to_listen_to">What do you want to listen to?</string>
    <string name="your_library">Your Library</string>
    <string name="add_artists">Add artists</string>
    <string name="to_create_a_new_playlist">to create a new playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="playlist">Playlist</string>
    <string name="build_your_own_playlist">Build your own playlist</string>
    <string name="playlist_s_title">playlist\'s title</string>
    <string name="my_playlist">My playlist</string>
    <string name="give_your_playlist_a_name">Give your playlist a name</string>
    <string name="create_playlist">Create playlist</string>
    <string name="song_title">Song title</string>
    <string name="song">song</string>
    <string name="choose_your_favourite_song">Choose your favourite song</string>
    <string name="all">All</string>
    <string name="music">Music</string>
    <string name="podcast">Podcast</string>
    <string name="artist_name">artist name</string>
    <string name="show_artist_profile_image">show artist profile image</string>
    <string name="cancel">Cancel</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="name">Name</string>
    <string name="your_profile">Your profile</string>
    <string name="listening_history">Listening history</string>
    <string name="setting_and_privacy">Setting and privacy</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="explore_your_favourite_songs">Explore your favourite songs</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="storage">Storage</string>
    <string name="log_out">Log out</string>
    <string name="your_email">Your Email</string>
    <string name="done">Done</string>
    <string name="your_password">Your Password</string>
    <string name="create_one">Create one</string>

    <string name="default_web_client_id">422281817402-s3mbn1jfvco16t5sf06qgfn3hfqkdj8d.apps.googleusercontent.com</string>

    <string name="now_playing">Now Playing</string>
    <string name="artists">Artists</string>
    <string name="trending">Trending</string>
    <string name="genre">Genre</string>
    <string name="explore">Explore</string>
    <string name="description">description</string>
    <string name="what_s_new">What\'s new</string>
    <string name="show_song_cover_image">show song cover image</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="user_name">user name</string>
    <string name="choose_your_favourite">Choose your favourite</string>
    <string name="edit">Edit</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="save">Save</string>
    <string name="change_image">Change Image</string>
    <string name="choose_your_playlist">Choose your playlist</string>
    <string name="view_artist">View artist</string>
    <string name="remove_from_this_playlist">Remove from this playlist</string>
</resources>