<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.login.LoginFragment"
    android:background="@color/black_gray">

    <TextView
        android:id="@+id/textView2"
        app:layout_constraintBottom_toTopOf="@+id/signup_anonymous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_your_favourite_songs"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/signup_anonymous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:text="@string/sign_up_free"
        android:textAllCaps="false"
        android:textColor="@color/black_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="10dp"
        android:paddingEnd="34dp"
        android:id="@+id/sign_in_google_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_sign_in"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_anonymous" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_facebook_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_sign_in"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="34dp"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_phonenumber_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_google_btn"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_phonenumber_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_sign_in"
        android:drawableStart="@drawable/ic_smartphone"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="34dp"
        android:text="@string/continue_with_phone_number"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_facebook_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:drawableStart="@drawable/ic_apple"
        android:paddingStart="10dp"
        android:paddingEnd="34dp"
        android:text="@string/continue_with_apple"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/sign_in_apple_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_phonenumber_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/log_in"
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_apple_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>