<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.album.UserPlaylistFragment"
    android:background="@color/black_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/back_to_home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_back" />

            <ImageView
                android:id="@+id/coverImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/gray"
                android:contentDescription="@string/show_artist_profile_image"
                 />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/artist_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_photo"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:background="@drawable/circle_view"
                    android:src="@drawable/ic_user"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/user_name"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/more_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/play_pause_btn"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_more"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/play_pause_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_play"
                    android:layout_alignParentEnd="true"

                    android:textSize="18sp" />

            </RelativeLayout>


            <Button
                android:id="@+id/add_to_playlist"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/add_to_playlist"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_Playlist"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>